Started implementation of integration tests. Moved ErrorResponse class to api yaml descriptor.
